--- a/Archivists' App/View/Properties/Resources.resx
+++ b/Archivists' App/View/Properties/Resources.resx
@@ -119,24 +119,24 @@
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="Actions Document Open 32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Document Open 32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Actions Document Open 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="Actions View Refresh 32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions View Refresh 32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Actions View Refresh 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="Cut Flatastic 32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Cut Flatastic 32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Cut Flatastic 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="Actions Document New 32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Document New 32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Actions Document New 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="Fred Flintstone" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Fred Flintstone.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Resources\Fred Flintstone.jpg;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="Copy Flatastic 32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Copy Flatastic 32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Copy Flatastic 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="Paste Flatastic 32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Paste Flatastic 32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Paste Flatastic 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
 </root>
