--- a/View/Properties/Resources.resx
+++ b/View/Properties/Resources.resx
@@ -139,6 +139,9 @@
   <data name="Grand_Piano_256x256" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\Grand Piano 256x256.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Kettle_Drum_256x256" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\Kettle Drum 256x256.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Link_Cerulean_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\Link Cerulean 32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
